Patch #3 by Glenn Adams; see Bugzilla 49687
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/branches/Temp_ComplexScripts@1078249 13f79535-47bb-0310-9956-ffa450edef68